--- a/src/projects/projects.json
+++ b/src/projects/projects.json
@@ -1,5 +1,5 @@
 {
   "layout": "project.njk",
-  "permalink": "projects/{{ title | slug }}/index.html",
+  "permalink": "esperienze/{{ title | slug }}/index.html",
   "tags": ["project"]
 }
